--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -833,8 +833,8 @@
    "metadata": {},
    "source": [
     "### Reflection 5 \n",
-    "- Which model performed better?\n",
-    "- Why might one classifier be more effective in this specific case?"
+    "- Which model performed better? It depends on what the goals are. Both models performed VERY similarly. The logistic regression model tended to perform better with variance and has higher precision with the combonation case. The decision tree performed better with Skewness and Var * Skew Interaction and excelled with recall for the combonation case. Based off of this, Logistic Regression should be used in cases where precision is more important and the Decision Tree should be used when recall or identifying true positives is more important. \n",
+    "- Why might one classifier be more effective in this specific case? With the goal of finding out which ones were the \"fakes\" it would be better to have the Linear Regression model because it has fewer false positives. We want a higher precision so we can find the correct banknotes and that fake banknotes do not go through. "
    ]
   },
   {
