--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -841,7 +841,93 @@
    "cell_type": "markdown",
    "id": "154644e2",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Section 6: Final Thoughts and Insights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feb3cb5d",
+   "metadata": {},
+   "source": [
+    "### 6.1 Summarize Findings\n",
+    "Throughout this project, we evaluated various machine learning models (Decision Tree and Logistic Regression) using different feature sets to predict banknote authenticity (binary classification). The results reveal the following key insights:\n",
+    "\n",
+    "- Logistic Regression tends to perform better in terms of precision across most cases, with higher F1 scores in some cases like Variance and Combo.\n",
+    "\n",
+    "- Decision Tree outperforms Logistic Regression in recall, especially when it comes to skewness and Var * Skew Interaction. This shows that the Decision Tree is better at identifying true positives, which is crucial for some applications where recall is prioritized over precision.\n",
+    "\n",
+    "T- he Combo case, which combines multiple features, shows that both models perform well, achieving an accuracy of around 90%. However, Logistic Regression had a slightly higher precision, while Decision Tree had a higher recall.\n",
+    "\n",
+    "- Features like skewness and the interaction between variance and skewness seemed to make it harder for the models to distinguish the classes, as evidenced by lower performance metrics in those cases.\n",
+    "\n",
+    "Overall, combining multiple features, as in the Combo case, led to the best results for both models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dafcd47c",
+   "metadata": {},
+   "source": [
+    "### 6.2 Discuss Challenges Faced\n",
+    "\n",
+    "- Feature Engineering:\n",
+    "\n",
+    "    - Selecting the right features for classification was challenging, as not all features contributed equally to the models' performance. For instance, the Var * Skew Interaction led to poor performance, which suggests that interaction terms might need further exploration to understand their impact.\n",
+    "\n",
+    "- Class Imbalance:\n",
+    "\n",
+    "    - While we used stratified sampling in the train_test_split to handle class imbalance, there may still be some effect of this imbalance that could be better managed with other techniques like oversampling/undersampling or using different evaluation metrics (e.g., ROC-AUC).\n",
+    "\n",
+    "- Model Overfitting:\n",
+    "\n",
+    "    - The Decision Tree model showed signs of overfitting in some cases, especially with fewer features. This is a common issue, and techniques such as pruning, setting a maximum depth, or using ensemble methods (e.g., Random Forests) could mitigate this.\n",
+    "\n",
+    "- Evaluation Metrics:\n",
+    "\n",
+    "    - It was essential to consider multiple metrics (Accuracy, Precision, Recall, F1 Score) for evaluating the models, as a single metric might not fully capture model performance, especially when the classes are imbalanced."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "853118c9",
+   "metadata": {},
+   "source": [
+    "### 6.3 Future Additions\n",
+    "\n",
+    "- Hyperparameter Tuning:\n",
+    "    - Using grid search or random search to fine-tune the hyperparameters of both models could improve their performance. For example, tuning the depth of the Decision Tree or regularization parameters in Logistic Regression could help achieve a better balance between precision and recall.\n",
+    "\n",
+    "- Ensemble Methods:\n",
+    "\n",
+    "    - Exploring ensemble methods like Random Forests or Gradient Boosting could provide better performance by reducing overfitting and improving generalization.\n",
+    "\n",
+    "- Advanced Feature Engineering:\n",
+    "\n",
+    "    - Investigating other potential features or transformations (log, square, or interactions of features) could improve model accuracy. I’d also consider testing domain-specific transformations to enhance the signal in the data.\n",
+    "\n",
+    "- Address Class Imbalance:\n",
+    "\n",
+    "    - Experimenting with oversampling or undersampling techniques (e.g., SMOTE) to handle class imbalance might further improve model performance, particularly for recall.\n",
+    "\n",
+    "- Deep Learning Models:\n",
+    "\n",
+    "    - Trying Neural Networks or other deep learning techniques for this classification problem could be a valuable experiment, given the rich nature of the data extracted from images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792f6224",
+   "metadata": {},
+   "source": [
+    "### Reflection 6\n",
+    "- What did I learn from this project? \n",
+    "    - I learned how to create and implement models from the ground up. \n",
+    "    - I learned how to create functions that implemented these models that could apply to data. \n",
+    "    - I learned The importance with choosing the best features in model performance (Var * Skew did not do well by itself but in combonation with the other features it performed well)\n",
+    "    - The balance of precision and recall\n",
+    "    - The importance of testing multiple models evaluating their different strengths"
+   ]
   }
  ],
  "metadata": {
