--- a/ml_classification_seabaugh.ipynb
+++ b/ml_classification_seabaugh.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 125,
    "id": "97f61b80",
    "metadata": {},
    "outputs": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "id": "398053ef",
    "metadata": {},
    "outputs": [
@@ -126,8 +126,7 @@
     "    df = pd.read_csv(file_path)\n",
     "    print(df.head(10))\n",
     "else:\n",
-    "    print(f\"File {file_path} does not exist.\")\n",
-    "\n"
+    "    print(f\"File {file_path} does not exist.\")\n"
    ]
   },
   {
@@ -140,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 127,
    "id": "8cbe14e7",
    "metadata": {},
    "outputs": [
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 128,
    "id": "c80f2da4",
    "metadata": {},
    "outputs": [
@@ -215,7 +214,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 129,
    "id": "fdce24b3",
    "metadata": {},
    "outputs": [
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 130,
    "id": "c455e0cb",
    "metadata": {},
    "outputs": [
@@ -351,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 131,
    "id": "8daac487",
    "metadata": {},
    "outputs": [],
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 132,
    "id": "7f9bc340",
    "metadata": {},
    "outputs": [
@@ -442,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 133,
    "id": "f3282298",
    "metadata": {},
    "outputs": [],
@@ -487,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 134,
    "id": "c1a000cd",
    "metadata": {},
    "outputs": [],
@@ -531,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "id": "74d47719",
    "metadata": {},
    "outputs": [
@@ -616,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 136,
    "id": "3e37463d",
    "metadata": {},
    "outputs": [
@@ -674,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 137,
    "id": "efad13f6",
    "metadata": {},
    "outputs": [],
@@ -718,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 138,
    "id": "8ce97afc",
    "metadata": {},
    "outputs": [
